# XDUCS-MI24-Backend

./: API_DOCUMENTATION.md  README.md  api_documentation.md  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
file/: admin.py  models.py  serializers.py  urls.py  views.py
file/migrations/: 0001_initial.py  0002_alter_mediafile_file.py
message/: admin.py  models.py  serializers.py  urls.py  views.py
message/migrations/: 0001_initial.py
notification/: admin.py  models.py  serializers.py  signals.py  views.py
notification/migrations/: 0001_initial.py  0002_notification_comment_and_more.py
post/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_content_options.py  0002_comment_parent.py
user/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_profile_background_image.py
